--- a/projet2.html
+++ b/projet2.html
@@ -145,7 +145,7 @@
               <h1 class="article-title">Projet Otelo</h1>
               <ul>
                 <li>
-                  <a href="https://gitlab.com/Djibrilnaji/NAJI/-/tree/master/otelo" target="_blank">Otelo sur Gitlab</a>
+                  <a href="http://oteloprojet.herokuapp.com/accueil" target="_blank">Otelo déployé</a>
                 </li>
               </ul>
             </div>
