--- a/projet2.html
+++ b/projet2.html
@@ -46,7 +46,7 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/index.html">Home</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="http://localhost/Portfolio/#about">A propos</a>
