modif localhost to github

--- a/projet2.html
+++ b/projet2.html
@@ -49,22 +49,22 @@
             <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#about">A propos</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#about">A propos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#CentreIntérêt">Centre d'intérêt</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#CentreIntérêt">Centre d'intérêt</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#VeilleTechno">Veille</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#VeilleTechno">Veille</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#blog">Stages et projets</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#blog">Stages et projets</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#certification">Certifications</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#certification">Certifications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#contact">Contact</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -84,7 +84,7 @@
               <a href="#">Home</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="http://localhost/Portfolio/#blog">Stages et projets</a>
+              <a href="https://djibrilnaji.github.io/Portfolio/#blog">Stages et projets</a>
             </li>
             <li class="breadcrumb-item active">Projets</li>
           </ol>
