--- a/certifAPasser.html
+++ b/certifAPasser.html
@@ -46,25 +46,25 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="http://localhost/Portfolio/#home">Home</a>
+            <a class="nav-link js-scroll active" href="https://djibrilnaji.github.io/Portfolio/#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#about">A propos</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#about">A propos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#CentreInteret">Centres d'intérêts</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#CentreInteret">Centres d'intérêts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#VeilleTechno">Veille</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#VeilleTechno">Veille</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#blog">Stages et projets</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#blog">Stages et projets</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#certification">Certifications</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#certification">Certifications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="http://localhost/Portfolio/#contact">Contact</a>
+            <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -84,7 +84,7 @@
               <a href="#">Home</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="http://localhost/Portfolio/#certification">Certification</a>
+              <a href="https://djibrilnaji.github.io/Portfolio/#certification">Certification</a>
             </li>
             <li class="breadcrumb-item active">Certifications</li>
           </ol>
