--- a/certifAPasser.html
+++ b/certifAPasser.html
@@ -46,7 +46,7 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="https://djibrilnaji.github.io/Portfolio/#home">Home</a>
+            <a class="nav-link js-scroll active" href="https://localhost/Portfolio/#home">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#about">A propos</a>
