--- a/projet1.html
+++ b/projet1.html
@@ -131,7 +131,7 @@
 
   <div class="line-mf"></div>
 
-  <section class="blog-wrapper sect-pt4" id="blog">
+  <section class="blog-wrapper sect-pt4">
     <div class="container">
       <div class="row">
         <div class="col-md">
@@ -167,7 +167,7 @@
 
   <div class="line-mf"></div>
 
-  <section class="blog-wrapper sect-pt4" id="blog">
+  <section class="blog-wrapper sect-pt4">
     <div class="container">
       <div class="row">
         <div class="col-md">
