modif localhost to github

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                                     (78) pour la promotion 2020-2022.
                                 </p>
                                 <p class="lead">
-                                    Je souhaite continuer dans le domaine de l'informatique.
-                                    Quel métier ? Je ne sais pas encore. Cependant, je compte continuer jusqu'au bac +5
-                                    minimum.
+                                    Je souhaite devenir développeur Full Stack pour pouvoir m'épanouir dans ce domaine
+                                    qu'est le développement informatique.
+
                                 </p>
 
                                 <button class="btn btn-primary" onclick="window.location.href = 'CV.pdf';">Télécharger
