modif localhost to github

--- a/stage.html
+++ b/stage.html
@@ -131,7 +131,9 @@
                             Les objectifs lors de mon stage étaient :
                             <br/>
                             - le développement d’une API REST avec une base de donnée, un framework ( Spring ) et avec
-                            les pratiques clean code comme TDD (API est un acronyme anglais qui signifie « Application
+                            les pratiques clean code comme TDD
+                            <br/>
+                            (API est un acronyme anglais qui signifie « Application
                             Programming Interface », que l'on traduit par interface de programmation d'application)
                             <br/>
                             - puis en fonction de mon avancée nous irons au développement d’un front end avec un
