--- a/index.html
+++ b/index.html
@@ -905,6 +905,11 @@
                         <!-- <li><a href="https://www.pinterest.fr/najidjibril/_saved/" target="_blank"><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li> -->
                     </ul>
                 </div>
+
+                <div>
+                    <button class="btn btn-primary" onclick="window.location.href = 'avis.html';">Donner son avis</button>
+                </div>
+
             </div>
         </div>
     </div>
@@ -924,6 +929,7 @@
         </div>
     </footer>
 </section>
+
 <!--/ Section Contact-footer End /-->
 
 <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
