--- a/avis.html
+++ b/avis.html
@@ -21,9 +21,49 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
-    <link href="avis.css" rel="stylesheet">
+    <link href="css/avis.css" rel="stylesheet">
 
-
+    <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll" href="https://djibrilnaji.github.io/Portfolio">Portfolio</a>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+                    aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll active"
+                           href="https://djibrilnaji.github.io/Portfolio/#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#about">A propos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#CentreInteret">Centres
+                            d'intérêts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll"
+                           href="https://djibrilnaji.github.io/Portfolio/#VeilleTechno">Veille</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#blog">Stages et
+                            projets</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll" href="https://djibrilnaji.github.io/Portfolio/#certification">Certifications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll"
+                           href="https://djibrilnaji.github.io/Portfolio/#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="contactez-nous">
         <h1>Donnez votre avis </h1>
         <p>Dites moi ce que vous pensez de mon Portfolio pour que je puisse l'améliorer... </p>
