modif localhost to github

--- a/index.html
+++ b/index.html
@@ -907,7 +907,14 @@
                 </div>
 
                 <div>
-                    <button class="btn btn-primary" onclick="window.location.href = 'avis.html';">Donner son avis</button>
+                    <button class="btn btn-primary" onclick="window.location.href = 'avis.html';">Donner son avis
+                    </button>
+                    <br/>
+                    <br/>
+                    <button class="btn btn-light" onclick="window.location.href = 'mentionsLegales.html';">Mentions
+                        légales
+                    </button>
+
                 </div>
 
             </div>
@@ -916,6 +923,7 @@
 
     <footer>
         <div class="container">
+
             <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
 
             Designed by Djibril NAJI
