--- a/stage.html
+++ b/stage.html
@@ -281,7 +281,7 @@
                     <br/>
                     <br/>
 
-                    <button class="btn btn-primary" onclick="window.location.href = 'tableauSynthese.pdf';">
+                    <button class="btn btn-primary" onclick="window.location.href = 'Tableau_synthese.pdf';">
                         Tableau de synthèse
                     </button>
                 </div>
