--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <!-- Bootstrap CSS File -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- AOS animation -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- Libraries CSS Files -->
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="lib/animate/animate.min.css" rel="stylesheet">
@@ -80,8 +84,8 @@
         <div class="table-cell">
             <div class="container">
                 <!--<p class="display-6 color-d">Hello, world!</p>-->
-                <h1 class="intro-title mb-4">Djibril NAJI</h1>
-                <p class="intro-subtitle"><span class="text-slider-items">Étudiant,BTS SIO option SLAM</span><strong
+                <h1 class="intro-title mb-4" data-aos="fade-down" data-aos-delay="400" data-aos-duration="500">Djibril NAJI</h1>
+                <p class="intro-subtitle" data-aos="fade-down" data-aos-delay="400" data-aos-duration="500"><span class="text-slider-items">Étudiant,BTS SIO option SLAM</span><strong
                         class="text-slider"></strong></p>
                 <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
             </div>
@@ -91,7 +95,7 @@
 <!--/ Intro Skew End /-->
 
 <section id="about" class="about-mf sect-pt4 route">
-    <div class="container">
+    <div class="container" data-aos="fade-down" data-aos-delay="200" data-aos-duration="400">
         <div class="row">
             <div class="col-sm-12">
                 <div class="box-shadow-full">
@@ -184,7 +188,7 @@
 
 <!--/ Section Services Star /-->
 <section id="CentreInteret" class="services-mf route">
-    <div class="container">
+    <div class="container" data-aos="fade-down" data-aos-delay="400" data-aos-duration="500">
         <div class="row">
             <div class="col-sm-12">
                 <div class="title-box text-center">
@@ -395,7 +399,7 @@
                     </a>
                 </div>
             </div>
-            <hr size="50" width="100%" color="0078FF">
+            <hr style="size: 100px; width: 100%; color: #0078ff">
 
             <!-- Exemples mails reçus  -->
             <div class="row">
@@ -907,10 +911,10 @@
                 </div>
 
                 <div>
-                    <button class="btn btn-primary" onclick="window.location.href = 'avis.html';">Donner son avis
-                    </button>
-                    <br/>
-                    <br/>
+<!--                    <button class="btn btn-primary" onclick="window.location.href = 'avis.html';">Donner son avis-->
+<!--                    </button>-->
+<!--                    <br/>-->
+<!--                    <br/>-->
                     <button class="btn btn-light" onclick="window.location.href = 'mentionsLegales.html';">Mentions
                         légales
                     </button>
@@ -959,6 +963,8 @@
 
 <!-- Template Main Javascript File -->
 <script src="js/main.js"></script>
-
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
