--- a/mentionsLegales.html
+++ b/mentionsLegales.html
@@ -31,6 +31,42 @@
       License: https://bootstrapmade.com/license/
     ======================================================= -->
 </head>
+<body><nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand js-scroll" href="#page-top">Portfolio</a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+                aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link js-scroll active" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="#about">A propos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="#CentreInteret">Centres d'intérêts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="#VeilleTechno">Veille</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="#blog">Stages et projets</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="#certification">Certifications</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <h1>Mentions légales</h1>
 <br/>
@@ -174,3 +210,6 @@ visitez et les services auxquels vous accédez, votre adresse IP, le type de vot
 telles informations sont utilisées exclusivement à des fins de statistiques internes, de manière à améliorer la qualité
 des services qui vous sont proposés. Les bases de données sont protégées par les dispositions de la loi du 1er juillet
 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.
+
+</body>
+</html>
