--- a/index.html
+++ b/index.html
@@ -104,27 +104,27 @@
 
 
 <section id="about" class="about-mf sect-pt4 route">
-    <?php
-    include "compteurVisite.php";
-    $nombre_visiteurs = visiteur($page_name);
-    ?>
-    <footer>
-        <h5>
-            <?php
-            echo "vous êtes le visteur n°", $nombre_visiteurs, " sur ce site !";
-            ?>
-            <!--            --><?php
-            //            echo $_SERVER['SERVER_NAME'];
-            //            ?>
-            <!---->
-            <!--            --><?php
-            //
-            //            echo $_SERVER["REMOTE_ADDR"];
-            //
-            //            ?>
-        </h5>
+<!--    <?php-->
+<!--    include "compteurVisite.php";-->
+<!--    $nombre_visiteurs = visiteur($page_name);-->
+<!--    ?>-->
+<!--    <footer>-->
+<!--        <h5>-->
+<!--            <?php-->
+<!--            echo "vous êtes le visteur n°", $nombre_visiteurs, " sur ce site !";-->
+<!--            ?>-->
+<!--            &lt;!&ndash;            &ndash;&gt;<?php-->
+<!--            //            echo $_SERVER['SERVER_NAME'];-->
+<!--            //            ?>-->
+<!--            &lt;!&ndash;&ndash;&gt;-->
+<!--            &lt;!&ndash;            &ndash;&gt;<?php-->
+<!--            //-->
+<!--            //            echo $_SERVER["REMOTE_ADDR"];-->
+<!--            //-->
+<!--            //            ?>-->
+<!--        </h5>-->
 
-    </footer>
+<!--    </footer>-->
 <!--    data-aos="fade-down" data-aos-delay="200" data-aos-duration="400"-->
     <div class="container" >
         <div class="row">
