--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <!--    <title>Portfolio | NAJI Djibril</title>-->
+    <title>Portfolio | NAJI Djibril</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -28,10 +28,10 @@
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
 
-    <?php
-    $page_name = "Portfolio | NAJI Djibril";
-    ?>
-    <title><?php echo $page_name; ?></title>
+    <!--    <?php-->
+    <!--    $page_name = "Portfolio | NAJI Djibril";-->
+    <!--    ?>-->
+    <!--    <title><?php echo $page_name; ?></title>-->
 
     <!-- =======================================================
       Theme Name: DevFolio
@@ -93,8 +93,8 @@
                 <h1 class="intro-title mb-4" data-aos="fade-down" data-aos-delay="400" data-aos-duration="500">Djibril
                     NAJI</h1>
                 <p class="intro-subtitle" data-aos="fade-down" data-aos-delay="400" data-aos-duration="500"><span
-                            class="text-slider-items">Étudiant,BTS SIO option SLAM</span><strong
-                            class="text-slider"></strong></p>
+                        class="text-slider-items">Étudiant,BTS SIO option SLAM</span><strong
+                        class="text-slider"></strong></p>
                 <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
             </div>
         </div>
@@ -104,29 +104,29 @@
 
 
 <section id="about" class="about-mf sect-pt4 route">
-<!--    <?php-->
-<!--    include "compteurVisite.php";-->
-<!--    $nombre_visiteurs = visiteur($page_name);-->
-<!--    ?>-->
-<!--    <footer>-->
-<!--        <h5>-->
-<!--            <?php-->
-<!--            echo "vous êtes le visteur n°", $nombre_visiteurs, " sur ce site !";-->
-<!--            ?>-->
-<!--            &lt;!&ndash;            &ndash;&gt;<?php-->
-<!--            //            echo $_SERVER['SERVER_NAME'];-->
-<!--            //            ?>-->
-<!--            &lt;!&ndash;&ndash;&gt;-->
-<!--            &lt;!&ndash;            &ndash;&gt;<?php-->
-<!--            //-->
-<!--            //            echo $_SERVER["REMOTE_ADDR"];-->
-<!--            //-->
-<!--            //            ?>-->
-<!--        </h5>-->
+    <!--    <?php-->
+    <!--    include "compteurVisite.php";-->
+    <!--    $nombre_visiteurs = visiteur($page_name);-->
+    <!--    ?>-->
+    <!--    <footer>-->
+    <!--        <h5>-->
+    <!--            <?php-->
+    <!--            echo "vous êtes le visteur n°", $nombre_visiteurs, " sur ce site !";-->
+    <!--            ?>-->
+    <!--            &lt;!&ndash;            &ndash;&gt;<?php-->
+    <!--            //            echo $_SERVER['SERVER_NAME'];-->
+    <!--            //            ?>-->
+    <!--            &lt;!&ndash;&ndash;&gt;-->
+    <!--            &lt;!&ndash;            &ndash;&gt;<?php-->
+    <!--            //-->
+    <!--            //            echo $_SERVER["REMOTE_ADDR"];-->
+    <!--            //-->
+    <!--            //            ?>-->
+    <!--        </h5>-->
 
-<!--    </footer>-->
-<!--    data-aos="fade-down" data-aos-delay="200" data-aos-duration="400"-->
-    <div class="container" >
+    <!--    </footer>-->
+    <!--    data-aos="fade-down" data-aos-delay="200" data-aos-duration="400"-->
+    <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <div class="box-shadow-full">
@@ -227,7 +227,7 @@
 
 <!--/ Section Services Star /-->
 <section id="CentreInteret" class="services-mf route">
-<!--    data-aos="fade-down" data-aos-delay="400" data-aos-duration="500"-->
+    <!--    data-aos="fade-down" data-aos-delay="400" data-aos-duration="500"-->
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -479,7 +479,7 @@
                                                 <li>
                                                     <a href="https://www.francebleu.fr/emissions/le-blog-de-la-mobilite/l-urbanloop-un-systeme-de-transport-urbain-propre-et-entierement-automatise"
                                                        target="_blank"><span class="ico-circle"><i
-                                                                    class="fa fa-google"></i></span></a>
+                                                            class="fa fa-google"></i></span></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -515,7 +515,7 @@
                                                 <li>
                                                     <a href="https://www.marianne.net/societe/big-brother/securite-faut-il-adopter-la-reconnaissance-faciale-systematique-dans-les-transports"
                                                        target="_blank"><span class="ico-circle"><i
-                                                                    class="fa fa-google"></i></span></a>
+                                                            class="fa fa-google"></i></span></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -551,7 +551,7 @@
                                                 <li>
                                                     <a href="https://www.fredzone.org/voiture-verifie-ivre-4434"
                                                        target="_blank"><span class="ico-circle"><i
-                                                                    class="fa fa-google"></i></span></a>
+                                                            class="fa fa-google"></i></span></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -587,7 +587,7 @@
                                                 <li>
                                                     <a href="https://strategieslogistique.com/Flottes-quand-la-telematique-s,10896"
                                                        target="_blank"><span class="ico-circle"><i
-                                                                    class="fa fa-google"></i></span></a>
+                                                            class="fa fa-google"></i></span></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -623,7 +623,7 @@
                                                 <li>
                                                     <a href="https://www.usinenouvelle.com/article/mobil-idees-un-transport-ferroviaire-leger-sauvera-les-petites-lignes.N1090659"
                                                        target="_blank"><span class="ico-circle"><i
-                                                                    class="fa fa-google"></i></span></a>
+                                                            class="fa fa-google"></i></span></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -659,7 +659,7 @@
                                                 <li>
                                                     <a href="https://www.cnetfrance.fr/news/roboat-le-bateau-taxi-autonome-du-mit-fait-ses-debuts-a-amsterdam-39931521.htm"
                                                        target="_blank"><span class="ico-circle"><i
-                                                                    class="fa fa-google"></i></span></a>
+                                                            class="fa fa-google"></i></span></a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -749,8 +749,8 @@
                             </div>
                         </div>
                         <h3 class="card-title"><a href="projet1.html">
-                                <div style="text-align: center;">PROJETS BTS 1ère année</div>
-                            </a></h3>
+                            <div style="text-align: center;">PROJETS BTS 1ère année</div>
+                        </a></h3>
                         <p class="card-description">
                         <div style="text-align: center;">Vous trouverez ici les projets que j'ai pu faire en
                             première
@@ -784,8 +784,8 @@
                             </div>
                         </div>
                         <h3 class="card-title"><a href="stage.html">
-                                <div style="text-align: center;">MES STAGES</div>
-                            </a></h3>
+                            <div style="text-align: center;">MES STAGES</div>
+                        </a></h3>
                         <p class="card-description">
                         <div style="text-align: center;">Vous trouverez ici les 2 stages que j'ai pu faire lors de
                             mes 2
@@ -817,8 +817,8 @@
                             </div>
                         </div>
                         <h3 class="card-title"><a href="projet2.html">
-                                <div style="text-align: center;">PROJETS BTS 2ème année</div>
-                            </a></h3>
+                            <div style="text-align: center;">PROJETS BTS 2ème année</div>
+                        </a></h3>
                         <p class="card-description">
                         <div style="text-align: center;">Vous trouverez ici les projets que j'ai pu faire en
                             deuxième
@@ -870,8 +870,8 @@
                             </div>
                         </div>
                         <h3 class="card-title"><a href="certifPasser.html">
-                                <div style="text-align: center;">Certifications passées</div>
-                            </a></h3>
+                            <div style="text-align: center;">Certifications passées</div>
+                        </a></h3>
                         <p class="card-description">
                         <div style="text-align: center;">Vous trouverez ici les certifications que j'ai déjà
                             passées.
@@ -905,8 +905,8 @@
                             </div>
                         </div>
                         <h3 class="card-title"><a href="certifAPasser.html">
-                                <div style="text-align: center;">Certifications/Cours à passer</div>
-                            </a></h3>
+                            <div style="text-align: center;">Certifications/Cours à passer</div>
+                        </a></h3>
                         <p class="card-description">
                         <div style="text-align: center;">Vous trouverez ici les certifications que je compte passer.
                         </div>
@@ -958,9 +958,9 @@
                         <!--                        <li><a href="https://gitlab.com/dashboard/projects" target="_blank"><span class="ico-circle"><i-->
                         <!--                                class="fa fa-gitlab"></i></span></a></li>-->
                         <li><a href="https://github.com/DjibrilNaji" target="_blank"><span class="ico-circle"><i
-                                            class="fa fa-github"></i></span></a></li>
+                                class="fa fa-github"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/djibril-naji-a400711aa/" target="_blank"><span
-                                        class="ico-circle"><i class="fa fa-linkedin"></i></span></a></li>
+                                class="ico-circle"><i class="fa fa-linkedin"></i></span></a></li>
                         <li>
                             <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJTHVhQwkgZFqQzpkPwrlbgqvpkFtptTZgFnHJhQBwwrnJGvnrfGhhxDHHMHmqJNpsqBBbB"
                                target="_blank"><span class="ico-circle"><i class="fa fa-envelope"></i></span></a>
