--- a/index.html
+++ b/index.html
@@ -377,11 +377,13 @@
                         <div class="work-content">
                             <div class="row">
                                 <div class="col-sm">
-                                    <h2 class="w-title">
-                                        <div style="text-align: center;">Je reçois les mails sur une adresse créée
+                                    <div style="text-align: center;">
+                                        <h2 class="w-title">
+                                            Je reçois les mails sur une adresse créée
                                             spécialement pour la veille
-                                        </div>
-                                    </h2>
+                                        </h2>
+                                    </div>
+
                                     <div class="w-more">
                                         <div style="text-align: center;"><span class="w-ctegory">Gmail</span> /
                                             <span
