--- a/mentionsLegales.html
+++ b/mentionsLegales.html
@@ -31,7 +31,8 @@
       License: https://bootstrapmade.com/license/
     ======================================================= -->
 </head>
-<body><nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
+<body>
+<nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
         <a class="navbar-brand js-scroll" href="#page-top">Portfolio</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
@@ -67,7 +68,7 @@
         </div>
     </div>
 </nav>
-
+<body>
 <h1>Mentions légales</h1>
 <br/>
 Merci de lire avec attention les différentes modalités d’utilisation du présent site avant d’y parcourir ses pages. En
